syntax = "proto3";

package pb;

option go_package="pb";

message Values {
    repeated string values = 1;
}

message HttpRequest {
    string version = 1;
    string method = 2;
    string url = 3;
    map<string, Values> headers = 4;
    string body = 5;
}

message HttpResponse {
    string version = 1;
    int32 statusCode = 2;
    string reasonPhase = 3;
    map<string, Values> headers = 4;
    string body = 5;
}

service GrpptService {
    rpc Do(HttpRequest) returns (HttpResponse) {};
    rpc DoStream(stream HttpRequest) returns (stream HttpResponse) {};
}
